added tooltips to financial page

--- a/client/financials.html
+++ b/client/financials.html
@@ -111,7 +111,7 @@
                                     <tr>
                                         <td>
                                             <div class="checkbox">
-                                                <div class="trigger" data-name="eps">EPS (Normalized/Diluted)</div>
+                                                <div class="trigger" data-name="eps">EPS (Normalized/Diluted) <img src="img/info.jpg" alt="" class="glossary-item" glossary-key="eps" width="11" height="11" /></div>
                                                 <input type="checkbox">
                                             </div>
                                         </td>
@@ -302,7 +302,7 @@
                                     <tr>
                                         <td>
                                             <div class="checkbox">
-                                                <div class="trigger" data-name="returnAssets" data-format="percent">ROA</div>
+                                                <div class="trigger" data-name="returnAssets" data-format="percent">ROA <img src="img/info.jpg" alt="" class="glossary-item" glossary-key="roa" width="11" height="11" /></div>
                                                 <input type="checkbox">
                                             </div>
                                         </td>
@@ -312,7 +312,7 @@
                                     <tr>
                                         <td>
                                             <div class="checkbox">
-                                                <div class="trigger" data-name="returnCapital" data-format="percent">ROC</div>
+                                                <div class="trigger" data-name="returnCapital" data-format="percent">ROC <img src="img/info.jpg" alt="" class="glossary-item" glossary-key="roc" width="11" height="11" /></div>
                                                 <input type="checkbox">
                                             </div>
                                         </td>
@@ -322,7 +322,7 @@
                                     <tr>
                                         <td>
                                             <div class="checkbox">
-                                                <div class="trigger" data-name="returnEquity" data-format="percent">ROE</div>
+                                                <div class="trigger" data-name="returnEquity" data-format="percent">ROE <img src="img/info.jpg" alt="" class="glossary-item" glossary-key="roe" width="11" height="11" /></div>
                                                 <input type="checkbox">
                                             </div>
                                         </td>
@@ -332,7 +332,7 @@
                                     <tr>
                                         <td>
                                             <div class="checkbox">
-                                                <div class="trigger" data-name="grossMargin" data-format="percent">Gross Margin</div>
+                                                <div class="trigger" data-name="grossMargin" data-format="percent">Gross Margin <img src="img/info.jpg" alt="" class="glossary-item" glossary-key="grossMargin" width="11" height="11" /></div>
                                                 <input type="checkbox">
                                             </div>
                                         </td>
@@ -342,7 +342,7 @@
                                     <tr>
                                         <td>
                                             <div class="checkbox">
-                                                <div class="trigger" data-name="ebitdaMargin" data-format="percent">EBITDA Margin</div>
+                                                <div class="trigger" data-name="ebitdaMargin" data-format="percent">EBITDA Margin <img src="img/info.jpg" alt="" class="glossary-item" glossary-key="ebitdaMargin" width="11" height="11" /></div>
                                                 <input type="checkbox">
                                             </div>
                                         </td>
@@ -352,7 +352,7 @@
                                     <tr>
                                         <td>
                                             <div class="checkbox">
-                                                <div class="trigger" data-name="netIncomeMargin" data-format="percent">Net Income Margin</div>
+                                                <div class="trigger" data-name="netIncomeMargin" data-format="percent">Net Income Margin <img src="img/info.jpg" alt="" class="glossary-item" glossary-key="netIncomeMargin" width="11" height="11" /></div>
                                                 <input type="checkbox">
                                             </div>
                                         </td>
@@ -362,7 +362,7 @@
                                     <tr>
                                         <td>
                                             <div class="checkbox">
-                                                <div class="trigger" data-name="assetTurns">Total Asset Turnover</div>
+                                                <div class="trigger" data-name="assetTurns">Total Asset Turnover <img src="img/info.jpg" alt="" class="glossary-item" glossary-key="totalAssetTurnover" width="11" height="11" /></div>
                                                 <input type="checkbox">
                                             </div>
                                         </td>
@@ -372,7 +372,7 @@
                                     <tr>
                                         <td>
                                             <div class="checkbox">
-                                                <div class="trigger" data-name="currentRatio">Current Ratio</div>
+                                                <div class="trigger" data-name="currentRatio">Current Ratio <img src="img/info.jpg" alt="" class="glossary-item" glossary-key="currentRatio" width="11" height="11" /></div>
                                                 <input type="checkbox">
                                             </div>
                                         </td>
@@ -382,7 +382,7 @@
                                     <tr>
                                         <td>
                                             <div class="checkbox">
-                                                <div class="trigger" data-name="quickRatio">Quick Ratio</div>
+                                                <div class="trigger" data-name="quickRatio">Quick Ratio <img src="img/info.jpg" alt="" class="glossary-item" glossary-key="quickRatio" width="11" height="11" /></div>
                                                 <input type="checkbox">
                                             </div>
                                         </td>
@@ -392,7 +392,7 @@
                                     <tr>
                                         <td>
                                             <div class="checkbox">
-                                                <div class="trigger" data-name="avgDaysInventory">Avg Days Inventory</div>
+                                                <div class="trigger" data-name="avgDaysInventory">Avg Days Inventory <img src="img/info.jpg" alt="" class="glossary-item" glossary-key="avgDaysInventory" width="11" height="11" /></div>
                                                 <input type="checkbox">
                                             </div>
                                         </td>
@@ -402,7 +402,7 @@
                                     <tr>
                                         <td>
                                             <div class="checkbox">
-                                                <div class="trigger" data-name="avgDaysPayable">Avg Days Payable</div>
+                                                <div class="trigger" data-name="avgDaysPayable">Avg Days Payable <img src="img/info.jpg" alt="" class="glossary-item" glossary-key="avgDaysPayable" width="11" height="11" /></div>
                                                 <input type="checkbox">
                                             </div>
                                         </td>
@@ -412,7 +412,7 @@
                                     <tr>
                                         <td>
                                             <div class="checkbox">
-                                                <div class="trigger" data-name="cashConversion">Avg Cash Conversion</div>
+                                                <div class="trigger" data-name="cashConversion">Avg Cash Conversion <img src="img/info.jpg" alt="" class="glossary-item" glossary-key="avgCashConversion" width="11" height="11" /></div>
                                                 <input type="checkbox">
                                             </div>
                                         </td>
@@ -422,7 +422,7 @@
                                     <tr>
                                         <td>
                                             <div class="checkbox">
-                                                <div class="trigger" data-name="totalDebtEquity" data-format="percent">Total Debt/Equity</div>
+                                                <div class="trigger" data-name="totalDebtEquity" data-format="percent">Total Debt/Equity <img src="img/info.jpg" alt="" class="glossary-item" glossary-key="totalDebtEquityFinancial" width="11" height="11" /></div>
                                                 <input type="checkbox">
                                             </div>
                                         </td>
@@ -432,7 +432,7 @@
                                     <tr>
                                         <td>
                                             <div class="checkbox">
-                                                <div class="trigger" data-name="ebitdaInterest">EBITDA/Int Exp</div>
+                                                <div class="trigger" data-name="ebitdaInterest">EBITDA/Int Exp <img src="img/info.jpg" alt="" class="glossary-item" glossary-key="ebitdaIntExp" width="11" height="11" /></div>
                                                 <input type="checkbox">
                                             </div>
                                         </td>
@@ -452,7 +452,7 @@
                                     <tr>
                                         <td>
                                             <div class="checkbox">
-                                                <div class="trigger" data-name="totalRevenue1YrAnnGrowth" data-format="percent">Total Revenue</div>
+                                                <div class="trigger" data-name="totalRevenue1YrAnnGrowth" data-format="percent">Total Revenue <img src="img/info.jpg" alt="" class="glossary-item" glossary-key="totalRev1YrAnnGrowth" width="11" height="11" /></div>
                                                 <input type="checkbox">
                                             </div>
                                         </td>
@@ -482,7 +482,7 @@
                                     <tr>
                                         <td>
                                             <div class="checkbox">
-                                                <div class="trigger" data-name="eps1YrAnnGrowth" data-format="percent">Normalized Diluted EPS</div>
+                                                <div class="trigger" data-name="eps1YrAnnGrowth" data-format="percent">Normalized Diluted EPS <img src="img/info.jpg" alt="" class="glossary-item" glossary-key="eps" width="11" height="11" /></div>
                                                 <input type="checkbox">
                                             </div>
                                         </td>
