another round of bug fixes

--- a/client/company-tearsheet.html
+++ b/client/company-tearsheet.html
@@ -62,7 +62,7 @@
                                         <td width="25%" class="property formattable" data-format="dollars" data-name="openPrice">-</td>
                                         <td width="25%">Day High/Low</td>
                                         <td width="25%">
-                                            <span class="property formattable" data-format="dollars" data-name="highPrice">-</span>/<span class="property formattable" data-format="dollars" data-name="lowPrice">-</span>
+                                            <span class="property formattable" data-format="dollars" data-name="highPrice">-</span>-<span class="property formattable" data-format="dollars" data-name="lowPrice">-</span>
                                         </td>
                                     </tr>
                                     <tr class="even">
@@ -76,7 +76,7 @@
                                         <td class="property formattable" data-name="previousCloseDate" data-format="date">-</td>
                                         <td>52 Week High/Low</td>
                                         <td class="custom">
-                                            <span class="property formattable" data-format="number" data-name="yearHigh">-</span>/<span class="property formattable" data-format="number" data-name="yearLow">-</span>
+                                            <span class="property formattable" data-format="number" data-name="yearHigh">-</span>-<span class="property formattable" data-format="number" data-name="yearLow">-</span>
                                         </td>
                                     </tr>
                                     <tr class="even">
