S&P feedback changes, more print report changes and various other cleanups

--- a/client/financials.html
+++ b/client/financials.html
@@ -298,7 +298,7 @@
                                     <tr>
                                         <td>
                                             <div class="checkbox">
-                                                <div class="trigger" data-name="returnAssets" data-format="percent">ROA <img src="img/info.jpg" alt="" class="glossary-item" glossary-key="roa" width="11" height="11" /></div>
+                                                <div class="trigger" data-name="returnAssets" data-format="percent">Return on Assets <img src="img/info.jpg" alt="" class="glossary-item" glossary-key="roa" width="11" height="11" /></div>
                                                 <input type="checkbox">
                                             </div>
                                         </td>
@@ -308,7 +308,7 @@
                                     <tr>
                                         <td>
                                             <div class="checkbox">
-                                                <div class="trigger" data-name="returnCapital" data-format="percent">ROC <img src="img/info.jpg" alt="" class="glossary-item" glossary-key="roc" width="11" height="11" /></div>
+                                                <div class="trigger" data-name="returnCapital" data-format="percent">Return on Capital <img src="img/info.jpg" alt="" class="glossary-item" glossary-key="roc" width="11" height="11" /></div>
                                                 <input type="checkbox">
                                             </div>
                                         </td>
@@ -318,7 +318,7 @@
                                     <tr>
                                         <td>
                                             <div class="checkbox">
-                                                <div class="trigger" data-name="returnEquity" data-format="percent">ROE <img src="img/info.jpg" alt="" class="glossary-item" glossary-key="roe" width="11" height="11" /></div>
+                                                <div class="trigger" data-name="returnEquity" data-format="percent">Return on Equity <img src="img/info.jpg" alt="" class="glossary-item" glossary-key="roe" width="11" height="11" /></div>
                                                 <input type="checkbox">
                                             </div>
                                         </td>
