--- a/trunk/client/company-tearsheet.html
+++ b/trunk/client/company-tearsheet.html
@@ -124,7 +124,7 @@
                                 <tbody>
                                     <tr>
                                         <td width="25%">Debt/EBITDA</td>
-                                        <td width="25%" class="property formattable" data-format="percent" data-name="totalDebtEbitda">-</td>
+                                        <td width="25%" class="property formattable" data-format="number" data-name="totalDebtEbitda">-</td>
                                         <td width="25%">Cap Ex</td>
                                         <td width="25%" class="property formattable" data-format="millions" data-name="capitalExpenditures">-</td>
                                     </tr>
@@ -169,11 +169,6 @@
                                         <td>-</td>
                                         <td>-</td>
                                         <td>-</td>
-                                    </tr>
-                                    <tr>
-                                    	<td>&nbsp;</td>
-                                        <td class="right">Total % of common stock:</td>
-                                        <td class="property formattable" data-format="percent" data-name="percentCommonStock">-</td>
                                     </tr>
                                 </tbody>
                             </table>
