--- a/trunk/client/index.html
+++ b/trunk/client/index.html
@@ -163,7 +163,7 @@
                                 <div class="trigger">5-Year Beta</div>
                                 <input type="checkbox" />
                             </div>
-                            <div class="checkbox" data-type="millions" data-name="volume"  data-display="true" data-short-name="Volume">
+                            <div class="checkbox" data-type="volume" data-name="volume"  data-display="true" data-short-name="Volume">
                                 <div class="trigger">Volume</div>
                                 <input type="checkbox" />
                             </div>
@@ -183,7 +183,7 @@
                                 <div class="trigger">Net Profit Margin</div>
                                 <input type="checkbox" />
                             </div>
-                            <div class="checkbox" data-type="percent" data-name="eps"  data-display="true" data-short-name="EPS">
+                            <div class="checkbox" data-type="dollars" data-name="eps"  data-display="true" data-short-name="EPS">
                                 <div class="trigger">Earnings Per Share</div>
                                 <input type="checkbox" />
                             </div>
