--- a/client/print.html
+++ b/client/print.html
@@ -2,7 +2,7 @@
 <html>
 
 <head>
-    <title>SGX - Company Profile</title>
+    <title>SGX</title>
     <link rel="stylesheet" href="stylesheets/style.css" />
     <link rel="stylesheet" href="stylesheets/print.css" />
     <script type="text/javascript" src="javascripts/vendor/requirejs/require.js" data-main="javascripts/main.js"></script>
