--- a/trunk/client/related.html
+++ b/trunk/client/related.html
@@ -34,7 +34,7 @@
 	                    <div class="label">Results</div>
 	                </div>
 	                <div class="toolbar">
-	                    <div class="results">0 Results</div>
+	                    <div class="results">Processing...</div>
 	                </div>
 	                
 	                <div class="table-wrapper results-display">
@@ -47,7 +47,7 @@
 						<div class="pager"></div>
 	                </div>
 
-					<div class="no-results-display">
+					<div class="no-results-display hidden">
 						No matching companies found.
 					</div>
 
