--- a/client/index.html
+++ b/client/index.html
@@ -219,7 +219,7 @@
                                 <div class="trigger">P/BV</div>
                                 <input type="checkbox" />
                             </div>
-                            <div class="checkbox" data-type="lookup" data-name="avgBrokerReq" data-display="true" data-short-name="Consensus" data-min="Sell" data-max="Buy" data-formatter='{ "type": "round-list", "values": [ "", "Sell", "Underperform", "Hold", "Overperform", "Buy" ] }'>
+                            <div class="checkbox" data-type="lookup" data-name="avgBrokerReq" data-display="true" data-short-name="Consensus" data-min="Sell" data-max="Buy" data-formatter='{ "type": "round-list", "values": [ "", "Buy", "Overperform", "Hold", "Underperform", "Sell"  ] }'>
                                 <div class="trigger">Consensus Recommendation</div>
                                 <input type="checkbox" />
                             </div>
@@ -256,7 +256,7 @@
                 </div>
                 <div class="toolbar">
                 
-                    <span class="column results">0 results</span>
+                    <span class="column results">Processing...</span>
                     
                     <span class="column center additional-criteria results-display" data-name="industry">
 						<div class="button-dropdown" data-label="Select Sector">
