removing unecessary files, print report cleanups

--- a/client/print.html
+++ b/client/print.html
@@ -11,7 +11,6 @@
 
 <body class="print-page" paper-height="11in" paper-width="8.5in" paper-margin="[ 0,0,0,0 ]">
 
-
 	<div class="page">
 	
 		<div class="container_3 header" type="special">
@@ -720,7 +719,7 @@
 	</div>
 
 
-	<div class="footer-content">
+	<div class="footer-content" style="height:95px;">
 		<style>
 			table.footer {
 				width: 100%;
@@ -732,7 +731,7 @@
 			}
 			
 			table.footer * {
-				font-size: 14px;
+				font-size: 13px;
 				color: #333;
 				font-family: Arial, Helvetica, sans-serif;
 			}
