making sgx more functional

--- a/client/company-tearsheet.html
+++ b/client/company-tearsheet.html
@@ -251,7 +251,7 @@
                 </div>
                 <div class="module dark-module alpha-factors">
                     <div class="title">
-                        <div class="label label-small">S&amp;P Capital IQ Alpha Factor Composites <img src="img/info.jpg" alt="" class="glossary-item" glossary-key="alphaFactors" width="11" height="11" /></div>
+                        <div class="label label-small">S&amp;P Capital IQ Alpha Factor Composites <img src="img/info.jpg" alt="" class="glossary-item glossary-left" glossary-key="alphaFactors" width="11" height="11" /></div>
                     </div>
                     <div class="no-factors">
                     	No Data Available
