--- a/trunk/client/alpha-factor.html
+++ b/trunk/client/alpha-factor.html
@@ -166,7 +166,7 @@
 
 			<div class="grid_3">
 
-	        	<div class="module module-results">
+	        	<div class="module module-results hidden">
 
 	                <div class="title">
 	                    <div class="label">Results</div>
@@ -229,6 +229,7 @@
     <div class="container_3">
         <div class="row">
 			<div class="grid_3">
+				<br />
 				Source: S&amp;P Capital IQ - <a href="terms-conditions.html" class="terms-conditions">Use of this information is subject to terms and conditions</a>
 			</div>
 		</div>
