--- a/trunk/client/company-tearsheet.html
+++ b/trunk/client/company-tearsheet.html
@@ -63,7 +63,7 @@
                                     </tr>
                                     <tr class="even">
                                         <td>Volume</td>
-                                        <td class="property" data-name="volume formattable" data-format="millions">-</td>
+                                        <td class="property formattable" data-name="volume" data-format="volume">-</td>
                                         <td>Previous Close</td>
                                         <td class="property formattable" data-format="number" data-name="previousClosePrice">-</td>
                                     </tr>
