--- a/trunk/client/company-tearsheet.html
+++ b/trunk/client/company-tearsheet.html
@@ -130,7 +130,7 @@
                                     </tr>
                                     <tr class="even">
                                         <td>Total Debt</td>
-                                        <td class="property formattable" data-format="millions" data-name="totalDebtEquity">-</td>
+                                        <td class="property formattable" data-format="millions" data-name="totalDebt">-</td>
                                         <td>EBIT</td>
                                         <td class="property formattable" data-format="millions" data-name="ebit" data-unit="mil">-</td>
                                     </tr>
