sync issue and typo

--- a/client/alpha-factor.html
+++ b/client/alpha-factor.html
@@ -46,7 +46,7 @@
         	
             <div class="grid_1 composite-leadin">
                 <h4 class="blue">What sets a company apart from its peers?</h4>
-                <p>This page will help you search for companies be seeing how they rate among their peers in eight style categories. Each style is a composite of several factors that could be used to identify investment themes behind each stock, and this page can help find companies that fit your stock selection criteria. By clicking on a point in one of the composites, you will see which companies 1-5 rank within that composite. <a class="read-more" alt="Read More"></a></p>
+                <p>This page will help you search for companies by seeing how they rate among their peers in eight style categories. Each style is a composite of several factors that could be used to identify investment themes behind each stock, and this page can help find companies that fit your stock selection criteria. By clicking on a point in one of the composites, you will see which companies 1-5 rank within that composite. <a class="read-more" alt="Read More"></a></p>
 
             </div>
             
