--- a/trunk/client/print.html
+++ b/trunk/client/print.html
@@ -164,7 +164,7 @@
 									</tr>
 									<tr class="even">
 										<td>Volume</td>
-										<td class="property" data-name="volume formattable" data-format="millions">-</td>
+										<td class="property formattable" data-name="volume" data-format="volume">-</td>
 										<td>Previous Close</td>
 										<td class="property formattable" data-format="number" data-name="previousClosePrice">-</td>
 									</tr>
@@ -234,7 +234,7 @@
 									</tr>
 									<tr class="even">
 										<td>Total Debt</td>
-										<td class="property formattable" data-format="millions" data-name="totalDebtEquity">-</td>
+										<td class="property formattable" data-format="millions" data-name="totalDebt">-</td>
 										<td>EBIT</td>
 										<td class="property formattable" data-format="millions" data-name="ebit" data-unit="mil">-</td>
 									</tr>
