--- a/trunk/client/print.html
+++ b/trunk/client/print.html
@@ -228,7 +228,7 @@
 								<tbody>
 									<tr>
 										<td width="25%">Debt/EBITDA</td>
-										<td width="25%" class="property formattable" data-format="percent" data-name="totalDebtEbitda">-</td>
+										<td width="25%" class="property formattable" data-format="number" data-name="totalDebtEbitda">-</td>
 										<td width="25%">Cap Ex</td>
 										<td width="25%" class="property formattable" data-format="millions" data-name="capitalExpenditures">-</td>
 									</tr>
