--- a/trunk/client/index.html
+++ b/trunk/client/index.html
@@ -143,7 +143,7 @@
                     
                         <h3 data-display="true">Market Data</h3>
                         <div class="panel">
-                            <div class="checkbox checked default" data-type="millions" data-name="marketCap" data-display="true" data-short-name="Mtk. Cap.">
+                            <div class="checkbox checked default" data-type="millions" data-name="marketCap" data-display="true" data-short-name="Mkt. Cap.">
                                 <div class="trigger">Total Market Cap</div>
                                 <input type="checkbox" />
                             </div>
