--- a/trunk/client/print.html
+++ b/trunk/client/print.html
@@ -42,7 +42,7 @@
 									Last Price:&nbsp;
 									<span class="date">
 										<span class="day">--</span>&nbsp;
-										<span class="time">--</span>
+										<span class="time">--</span> SGT
 									</span>
 								</div>
 							</span>				
