resolving some SGX bugs

--- a/client/alpha-factor.html
+++ b/client/alpha-factor.html
@@ -199,7 +199,7 @@
 
 		        <div class="editSearchB hidden">
 		        
-	                  <div class="checkbox checked default" data-type="millions" data-name="marketCap" data-display="true" data-short-name="Mtk. Cap.">
+	                  <div class="checkbox checked default" data-type="millions" data-name="marketCap" data-display="true" data-short-name="Mkt. Cap.">
 	                      <div class="trigger">Total Market Cap</div>
 	                      <input type="checkbox">
 	                  </div>
