--- a/trunk/client/company-tearsheet.html
+++ b/trunk/client/company-tearsheet.html
@@ -57,7 +57,7 @@
                                         <td width="25%">Open Price</td>
                                         <td width="25%" class="property formattable" data-format="dollars" data-name="openPrice">-</td>
                                         <td width="25%">Day High/Low</td>
-                                        <td width="25%">
+                                        <td width="25%" class="right">
                                             <span class="property formattable" data-format="dollars" data-name="highPrice">-</span>-<span class="property formattable" data-format="dollars" data-name="lowPrice">-</span>
                                         </td>
                                     </tr>
@@ -71,7 +71,7 @@
                                         <td>Previous Close Date</td>
                                         <td class="property formattable" data-name="previousCloseDate" data-format="date">-</td>
                                         <td>52 Week High/Low</td>
-                                        <td class="custom">
+                                        <td class="custom right">
                                             <span class="property formattable" data-format="number" data-name="yearHigh">-</span>-<span class="property formattable" data-format="number" data-name="yearLow">-</span>
                                         </td>
                                     </tr>
@@ -160,8 +160,8 @@
                                 <thead>
                                     <tr>
                                         <td width="50%">Top 5 owners by shares held</td>
-                                        <td width="25%">Number of shares held</td>
-                                        <td width="25%">Percent of shares held</td>
+                                        <td width="25%" class="right">Number of shares held</td>
+                                        <td width="25%" class="right">Percent of shares held</td>
                                     </tr>
                                 </thead>
                                 <tbody class="owners">
