adding keywords to results copy and some new sort text

--- a/client/related.html
+++ b/client/related.html
@@ -31,10 +31,10 @@
 	        	<div class="module module-results">
 
 	                <div class="title">
-	                    <div class="label">Results</div>
+	                    <div class="label">Fetching results...</div>
 	                </div>
 	                <div class="toolbar">
-	                    <div class="results">Processing...</div>
+	                    <div class="results">Select a column header to change the sort order.</div>
 	                </div>
 	                
 	                <div class="table-wrapper results-display">
