--- a/trunk/client/alpha-factor.html
+++ b/trunk/client/alpha-factor.html
@@ -169,10 +169,10 @@
 	        	<div class="module module-results hidden">
 
 	                <div class="title">
-	                    <div class="label">Results</div>
+	                    <div class="label">Fetching results...</div>
 	                </div>
 	                <div class="toolbar">
-	                    <div class="results">Processing...</div>
+	                    <div class="results">Select a column header to change the sort order.</div>
 	                </div>
 	                
 	                <div class="table-wrapper results-display">
