making new ticker/name search work

--- a/client/index.html
+++ b/client/index.html
@@ -43,8 +43,14 @@
 	            <div class="description">
 	                <div class="intro-headline">Your search for investment opportunity begins here.</div>
 	                <p>Whether you seek new companies or established stable performers, we can help you identify the stocks that best fit your investment strategy.</p>
+					<div class="searchtoggle">
+						<span class="toggle button sname" data-name="name" data-placeholder="Search by company name">Company Name</span><span class="toggle button scode" data-name="code" data-placeholder="Search by stock code">Stock Code</span>
+						<div class="arrows">
+							<span class="arrow sname" data-name="name" ></span><span class="arrow scode" data-name="code"></span>
+						</div>
+					</div>
 	                <div class="searchbar">
-	                    <input type="text" placeholder="Company name or stock code" />
+	                    <input type="text" />
 	                    <div class="search-submit" class="button" value="" alt="Search Submit"></div>
 	                </div>
 	                <div class="button all-companies">View All Companies</div>
