--- a/client/financials.html
+++ b/client/financials.html
@@ -3,7 +3,7 @@
 
 <head>
     <title>SGX - Financials</title>
-    <link rel="stylesheet" href="stylesheets/style.css" />
+    <link rel="stylesheet" href="stylesheets/style.css?v=2.0" />
 	<link rel="stylesheet" href="stylesheets/vendor/colorbox/colorbox.css" />
 	<!--[if lt IE 9]>
     	<link rel="stylesheet" href="stylesheets/ie8.css" />
