--- a/client/print.html
+++ b/client/print.html
@@ -3,7 +3,7 @@
 
 <head>
     <title>SGX</title>
-    <link rel="stylesheet" href="stylesheets/style.css" />
+    <link rel="stylesheet" href="stylesheets/style.css?v=2.0" />
     <link rel="stylesheet" href="stylesheets/print.css" />
 	<script type="text/javascript">window.renderable = false;</script>
     <script type="text/javascript" src="javascripts/vendor/requirejs/require.js" data-main="javascripts/main.js"></script>
