added disclaimer to tc and fixed slider issues finally

--- a/client/terms-conditions.html
+++ b/client/terms-conditions.html
@@ -18,6 +18,8 @@
 		<li>You acknowledge S&P, Capital IQ, Inc., their affiliates and SGX affiliates and MSCI as third party beneficiaries of the these terms and conditions and that each of them is entitled to enforce all provisions hereof.</li>
 		<li>You agree to indemnify and hold harmless SGX, its Information Providers, and any other third party involved in or related to the making or compiling of SGX All In One and/or the data and information contained therein, from and against any claims, losses, damages, liabilities, costs and expenses, including reasonable attorneys' fees and costs, as incurred, arising in any manner out of your use of, or inability to use, the SGX All In One and/or the data and information contained therein or any breach by you of the use restrictions regarding the SGX All In One and/or the data and information contained therein.</li>
 	</ul>
+	
+	<p>Disclaimer: Nothing herein should be considered to be a solicitation or recommendation to buy or sell any security, nor should it be considered to be investment advice. Advice should be sought from a financial adviser regarding the suitability of any investments, taking into account the specific investment objectives, financial situation or particular needs of any person in receipt of the recommendation.</p>
 
 </div>
 
